Start with a cat

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
     <div class=reveal>
       <div class=slides>
         <section>
+          <p align=center><img class="inline spin" src=img/railsgirls.png></p>
+        </section>
+
+        <section>
           <h1>Именоване</h1>
           <p><small><a href=https://github.com/gsamokovarov>Генади Самоковаров</a> / <a href=https://twitter.com/gsamokovarov>@gsamokovarov</a></small></p>
         </section>
@@ -79,7 +83,7 @@
         history: true,
         center: true,
         rollingLinks: true,
-        transition: 'default',
+        transition: 'fade',
         dependencies: [
           {
             src: 'vendor/reveal.js/plugin/highlight/highlight.js',
