--- a/index.html
+++ b/index.html
@@ -9,55 +9,8 @@
     <meta name=author content="Генади Самоковаров">
 
     <link rel=stylesheet href=vendor/reveal.js/css/reveal.css>
-    <link rel=stylesheet href=vendor/reveal.js/css/theme/simple.css>
+    <link rel=stylesheet href=css/railsgirls.css>
     <link rel=stylesheet href=vendor/monokai.css>
-
-    <style>
-      .reveal,
-      .reveal h1,
-      .reveal h2,
-      .reveal h3,
-      .reveal h4,
-      .reveal h5,
-      .reveal h6 { font-family: Palatino, Georgia, serif; }
-
-      .reveal h1 { font-size: 2.2em; text-shadow: none; }
-      .reveal h2 { font-size: 1.9em; }
-      .reveal h3 { font-size: 1.8em; }
-      .reveal h4 { font-size: 1.5em; }
-      .reveal h5 { font-size: 1.2em; }
-
-      .reveal pre.inline { box-shadow: none; }
-      .reveal img.inline { background: transparent; border: 0; box-shadow: none; margin: 0; vertical-align: middle; }
-      .reveal a:hover img.inline { background: transparent; border: 0; box-shadow: none; }
-
-      .reveal a.image { text-decoration: none; }
-
-      .reveal .hidden { visibility: hidden; }
-
-      .reveal .spin:hover { -moz-animation: spin 2s infinite linear; -o-animation: spin 2s infinite linear; -webkit-animation: spin 2s infinite linear; animation: spin 2s infinite linear; }
-
-      @-moz-keyframes spin {
-        0%   { -moz-transform: rotate(0deg); }
-        100% { -moz-transform: rotate(359deg); }
-      }
-      @-webkit-keyframes spin {
-        0%   { -webkit-transform: rotate(0deg); }
-        100% { -webkit-transform: rotate(359deg); }
-      }
-      @-o-keyframes spin {
-        0%   { -o-transform: rotate(0deg); }
-        100% { -o-transform: rotate(359deg); }
-      }
-      @-ms-keyframes spin {
-        0%   { -ms-transform: rotate(0deg); }
-        100% { -ms-transform: rotate(359deg); }
-      }
-      @keyframes spin {
-        0%   { transform: rotate(0deg); }
-        100% { transform: rotate(359deg); }
-      }
-    </style>
   </head>
   <body>
     <div class=reveal>
