Oops, guity of copy-pasting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8>
 
-    <title>Node Deployment</title>
+    <title>Naming Things</title>
 
     <meta name=description content="Именоване">
     <meta name=author content="Генади Самоковаров">
