Two things slide

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
           <h1>Именоване</h1>
           <p><small><a href=https://github.com/gsamokovarov>Генади Самоковаров</a> / <a href=https://twitter.com/gsamokovarov>@gsamokovarov</a></small></p>
         </section>
+
+        <section>
+          <blockquote>There are only two hard things in Computer Science: cache invalidation and naming things.</blockquote>
+          <p><small>Phil Karlton</small></p>
+        </section>
       </div>
     </div>
 
