In bulgarian, of course

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </section>
 
         <section>
-          <blockquote>There are only two hard things in Computer Science: cache invalidation and naming things.</blockquote>
-          <p><small>Phil Karlton</small></p>
+          <blockquote>В компютърните науки има име две трудни неща: кеш инвалидацията и именоването на неща.</blockquote>
+          <p><small>Фил Карлтон</small></p>
         </section>
       </div>
     </div>
