That's it, folks

--- a/index.html
+++ b/index.html
@@ -28,6 +28,49 @@
           <blockquote>В компютърните науки има име две трудни неща: кеш инвалидацията и именоването на неща.</blockquote>
           <p><small>Фил Карлтон</small></p>
         </section>
+
+        <section>
+          <h1>5 Съвета</h1>
+        </section>
+
+        <section>
+          <h2>Кръщавайте рутините след каквото правят</h2>
+          <br>
+          <p class=fragment>Ако имената им станат прекалено дълги, това е защото правят много неща.</p>
+          <p class=fragment>Не искате рутините да правят много неща.</p>
+        </section>
+
+        <section>
+          <h2>Не съкращавайте ненужно</h2>
+          <br>
+          <p class=fragment>Не използвайте съкращения, когато няма смисъл. <p class=fragment>(Понякога има)</p></p>
+          <p class=fragment>Обектите, които ще живеят по-дълго, заслужават по-дълги имена.</p>
+        </section>
+
+        <section>
+          <h2>Използвайте отрицания</h2>
+          <br>
+          <p class=fragment><code>create</code> &rarr; <code>dispose</code></p>
+          <p class=fragment><code>setup</code> &rarr; <code>teardown</code></p>
+          <p class=fragment>Избягвайте двойни отрицания.</p>
+        </section>
+
+        <section>
+          <h2>Търсете симетрия</h2>
+          <br>
+          <p class=fragment>Ако имате рутина <code>start</code>, бихте искали и <code>stop</code>.</p>
+        </section>
+
+        <section>
+          <h2>Eдинна конвенция</h2>
+          <br>
+          <p class=fragment>Правете сходни дейстия, по сходен начин.</p>
+          <p class=fragment>Именовайте сходни обекти, по сходен начин.</p>
+        </section>
+
+        <section>
+          <h1>Обичайте се!</h1>
+        </section>
       </div>
     </div>
 
