Use even more RailsGirls inspired style

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class=reveal>
       <div class=slides>
-        <section>
-          <p align=center><img class="inline spin" src=img/railsgirls.png></p>
+        <section data-state=logo>
+          <p align=center><img class="inline" src=img/logo.png></p>
         </section>
 
         <section>
@@ -69,7 +69,7 @@
         </section>
 
         <section>
-          <h1>Обичайте се!</h1>
+          <p align=center><img class="inline spin" src=img/cat.png></p>
         </section>
       </div>
     </div>
