--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         </section>
 
         <section>
-          <h2>Не съкращавайте ненужно</h2>
+          <h2>Внимавайте със съкращенята</h2>
           <br>
           <p class=fragment>Не използвайте съкращения, когато няма смисъл. <p class=fragment>(Понякога има)</p></p>
           <p class=fragment>Обектите, които ще живеят по-дълго, заслужават по-дълги имена.</p>
         </section>
 
         <section>
-          <h2>Използвайте отрицания</h2>
+          <h2>Използвайте отрицания коректно</h2>
           <br>
           <p class=fragment><code>create</code> &rarr; <code>dispose</code></p>
           <p class=fragment><code>setup</code> &rarr; <code>teardown</code></p>
