--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </section>
 
         <section>
-          <h2>Кръщавайте рутините след каквото правят</h2>
+          <h2>Кръщавайте операциите след каквото правят</h2>
           <br>
           <p class=fragment>Ако имената им станат прекалено дълги, това е защото правят много неща.</p>
-          <p class=fragment>Не искате рутините да правят много неща.</p>
+          <p class=fragment>Не искате операциите да правят много неща.</p>
         </section>
 
         <section>
