--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class=reveal>
       <div class=slides>
         <section data-state=logo>
-          <p align=center><img class="inline" src=img/logo.png></p>
+          <p align=center><img class=inline src=img/logo.png></p>
         </section>
 
         <section>
